[package]
name = "rust_coding_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = {version = "1.0.136", features = ["derive"]}
rust_decimal = "1.22.0"
rand = "0.8.5"
libmath = "0.2.1"